# trashbot

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml  rust.yml
src/: main.rs  utils.rs
src/commands/: about.rs  laprate.rs  levelup.rs  lore.rs  mod.rs  recap.rs
src/commands/levelup/: delete.rs  level.rs  mod.rs  wlaw.rs
src/commands/stalker/: arch.rs  birbs.rs  clapclap.rs  gnu.rs  heart.rs  memes  memes.rs  mod.rs
src/commands/wha_happun/: mod.rs  query.graphql
