[package]
name = "trashbot"
version = "0.1.0"
authors = ["Liam Kalir <liamkalir9595@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.8.3"
graphql_client = "0.9.0"
lazy-regex = "1.1.0"
log = "0.4.14"
once_cell = "1.7.2"
rand = { version = "0.8.3", features = ["small_rng"] }
regex = "1.5.4"
reqwest = { version = "0.11.1", features = ["json"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
serenity = { version = "0.10.2", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
  "standard_framework",
  "framework",
  "cache",
  "http",
] }
smol_str = "0.1.17"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
