[package]
name = "trashbot"
version = "0.1.0"
authors = ["Liam Kalir <liam.kalir@pm.me>"]
edition = "2018"

[dependencies]
env_logger = "0.8.4"
graphql_client = "0.9.0"
lazy-regex = "2.2.1"
log = "0.4.14"
once_cell = "1.8.0"
rand = { version = "0.8.4", features = ["small_rng"] }
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serenity = { version = "0.10.8", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
  "standard_framework",
  "framework",
  "cache",
  "http",
] }
smol_str = "0.1.18"
tokio = { version = "1.7.1", features = ["macros", "rt-multi-thread"] }
