[package]
name = "trashbot"
version = "0.1.0"
authors = ["Liam Kalir <liam.kalir@pm.me>"]
edition = "2021"

[dependencies]
chrono = "0.4.19"
env_logger = "0.9.0"
graphql_client = "0.10.0"
lazy-regex = "2.2.2"
log = "0.4.14"
once_cell = "1.9.0"
rand = { version = "0.8.4", features = ["small_rng"] }
regex = "1.5.4"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
serenity = { version = "0.10.9", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
  "standard_framework",
  "framework",
  "cache",
  "http",
  "unstable_discord_api",
] }
smol_str = "0.1.21"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
